--- a/mufajok.html
+++ b/mufajok.html
@@ -21,13 +21,6 @@
             border-radius: 5px;
         }
 
-        img {
-            display: flex;
-            justify-content: space-evenly;
-            align-items: center;
-            flex-wrap: wrap;
-        }
-
         .flex {
             display: flex;
             justify-content: space-evenly;
@@ -40,6 +33,15 @@
             border-radius: 20px;
         }
     </style>
+
+    <script>
+        function showmore(id, button) {
+            let style = document.getElementById(id).style;
+            let show = style.display !== 'block';
+            style.display = show ? 'block' : 'none';
+            button.innerText = show ? 'Mutass kevesebbet' : 'Mutass többet';
+        }
+    </script>
 
 </head>
 
@@ -79,6 +81,8 @@
                         játékos az
                         általa irányított figura szemszögéből látja a játékban történteket.
                     </p>
+                    <button type="button" onclick="showmore('1', this)">Mutass többet
+                    </button>
                     <div class="mufaj-kep" id="1">
                         <div class="flex">
                             <img class="mufaj-kep2" src="images/fps.gif" alt="">
@@ -89,11 +93,7 @@
                         </div>
                     </div>
                     <br>
-                    <button type="button" onclick="document.getElementById('1').style.display='none'">Mutass
-                        kevesebbet
-                    </button>
-                    <button type="button" onclick="document.getElementById('1').style.display='block'">Mutass többet
-                    </button>
+
                 </div>
             </li>
             <li>
@@ -104,6 +104,8 @@
                         általában
                         fedezékről-fedezékre haladva kell leszámolnia ellenfeleivel.
                     </p>
+                    <button type="button" onclick="showmore('2', this)">Mutass többet
+                    </button>
                     <div class="mufaj-kep" id="2">
                         <div class="flex">
                             <img class="mufaj-kep2" src="images/tps.jpg" alt="">
@@ -114,11 +116,7 @@
                         </div>
                     </div>
                     <br>
-                    <button type="button" onclick="document.getElementById('2').style.display='none'">Mutass
-                        kevesebbet
-                    </button>
-                    <button type="button" onclick="document.getElementById('2').style.display='block'">Mutass többet
-                    </button>
+
                 </div>
             </li>
             <li>
@@ -126,6 +124,8 @@
                 <p>
                     Klasszikus, 2D-s megjelenítési módot használó játék.
                 </p>
+                <button type="button" onclick="showmore('3', this)">Mutass többet
+                </button>
                 <div class="mufaj-kep" id="3">
                     <div class="flex">
                         <img class="mufaj-kep2" src="images/asd.jpg" alt="">
@@ -136,10 +136,7 @@
                     </div>
                 </div>
                 <br>
-                <button type="button" onclick="document.getElementById('3').style.display='none'">Mutass kevesebbet
-                </button>
-                <button type="button" onclick="document.getElementById('3').style.display='block'">Mutass többet
-                </button>
+
             </li>
         </ul>
     </li>
@@ -156,6 +153,8 @@
                     különböző
                     érméket, kincseket és egyéb gyűjtögetni valókat szedhetünk össze a magasabb pontszám érdekében.
                 </p>
+                <button type="button" onclick="showmore('4', this)">Mutass többet
+                </button>
                 <div class="mufaj-kep" id="4">
                     <div class="flex">
                         <img class="mufaj-kep2" src="images/platformer.jpg" alt="">
@@ -166,10 +165,7 @@
                     </div>
                 </div>
                 <br>
-                <button type="button" onclick="document.getElementById('4').style.display='none'">Mutass kevesebbet
-                </button>
-                <button type="button" onclick="document.getElementById('4').style.display='block'">Mutass többet
-                </button>
+
             </li>
         </ul>
         <ul>
@@ -177,6 +173,8 @@
                 <h2>Kaland</h2>
                 <p>
                 </p>
+                <button type="button" onclick="showmore('5', this)">Mutass többet
+                </button>
                 <div class="mufaj-kep" id="5">
                     <div class="flex">
                         <img class="mufaj-kep2" src="images/adventure.jpg" alt="">
@@ -187,10 +185,7 @@
                     </div>
                 </div>
                 <br>
-                <button type="button" onclick="document.getElementById('5').style.display='none'">Mutass kevesebbet
-                </button>
-                <button type="button" onclick="document.getElementById('5').style.display='block'">Mutass többet
-                </button>
+
             </li>
         </ul>
     </li>
@@ -210,6 +205,8 @@
                     végtelen, de játékonként eltérő lehet. Legismertebbek a World of Warcraft, Lineage I/II, Guild Wars,
                     Roblox.
                 </p>
+                <button type="button" onclick="showmore('6', this)">Mutass többet
+                </button>
                 <div class="mufaj-kep" id="6">
                     <div class="flex">
                         <img class="mufaj-kep2" src="images/MMORPG.jpg" alt="">
@@ -220,10 +217,7 @@
                     </div>
                 </div>
                 <br>
-                <button type="button" onclick="document.getElementById('6').style.display='none'">Mutass kevesebbet
-                </button>
-                <button type="button" onclick="document.getElementById('6').style.display='block'">Mutass többet
-                </button>
+
             </li>
             <li>
                 <h2>RPG:</h2>
@@ -234,6 +228,8 @@
                     barátunkkal
                     vagy random emberrel együtt online vagy akár offline co-op módban (Pl. Diablo 3)
                 </p>
+                <button type="button" onclick="showmore('7', this)">Mutass többet
+                </button>
                 <div class="mufaj-kep" id="7">
                     <div class="flex">
                         <img class="mufaj-kep2" src="images/diablo.jpg" alt="">
@@ -244,10 +240,7 @@
                     </div>
                 </div>
                 <br>
-                <button type="button" onclick="document.getElementById('7').style.display='none'">Mutass kevesebbet
-                </button>
-                <button type="button" onclick="document.getElementById('7').style.display='block'">Mutass többet
-                </button>
+
             </li>
         </ul>
     </li>
@@ -266,46 +259,37 @@
                     feladatok az erőforrások összegyűjtése, bázisok építése, technológia fejlesztése és az egységek
                     irányítása.
                 </p>
+                <button type="button" onclick="showmore('8', this)">Mutass többet
+                </button>
                 <div class="mufaj-kep" id="8">
                     <img class="mufaj-kep2" src="images/RTS.JPG" alt="">
+                    <img class="mufaj-kep2" src="images/RTS2.JPG" alt="">
+                    <img class="mufaj-kep2" src="images/RTS3.JPG" alt="">
+                    <img class="mufaj-kep2" src="images/RTS4.JPG" alt="">
+                    <img class="mufaj-kep2" src="images/RTS5.JPG" alt="">
                 </div>
-                <br>
-                <button type="button" onclick="document.getElementById('8').style.display='none'">Mutass kevesebbet
-                </button>
-                <button type="button" onclick="document.getElementById('8').style.display='block'">Mutass többet
-                </button>
-            </li>
-            <li>
-                <h2>Valós idejű taktika</h2>
-                <div class="mufaj-kep" id="9">
-                    <img class="mufaj-kep2" src="images/valosideju.jpg" alt="">
-                </div>
-                <br>
-                <button type="button" onclick="document.getElementById('9').style.display='none'">Mutass kevesebbet
-                </button>
-                <button type="button" onclick="document.getElementById('9').style.display='block'">Mutass többet
-                </button>
             </li>
             <li>
                 <h2>Körökre osztott stratégia:</h2>
                 <p>
                     Például: Civilization IV
                 </p>
+                <button type="button" onclick="showmore('10', this)">Mutass többet
+                </button>
                 <div class="mufaj-kep" id="10">
-                    <img class="mufaj-kep2" src="images/korokreosztott.jpg" alt="">
+                    <img class="mufaj-kep2" src="images/valosideju.jpg" alt="">
+                    <img class="mufaj-kep2" src="images/valosideju2.jpg" alt="">
+                    <img class="mufaj-kep2" src="images/valosideju3.jpg" alt="">
+                    <img class="mufaj-kep2" src="images/valosideju4.jpg" alt="">
+                    <img class="mufaj-kep2" src="images/valosideju5.jpg" alt="">
                 </div>
-                <br>
-                <button type="button" onclick="document.getElementById('10').style.display='none'">Mutass kevesebbet
-                </button>
-                <button type="button" onclick="document.getElementById('10').style.display='block'">Mutass többet
-                </button>
             </li>
         </ul>
     </li>
 </ul>
 <ul>
     <li>
-        <h2>Menedzselős és szimulátor,</h2>
+        <h2>Menedzselős és szimulátor:</h2>
         <p>
             „Istenszimulátor”, városszimulátor: A valós idejű stratégiai játékokhoz
             hasonlító játéktípus. A játékosnak egy igen részletesen kidolgozott világot (emberekkel vagy kitalált
@@ -334,12 +318,10 @@
             épülő
             Életjátéka.
         </p>
+        <button type="button" onclick="showmore('11', this)">Mutass többet</button>
         <div class="mufaj-kep" id="11">
             <img class="mufaj-kep2" src="images/menedzselos.jpg" alt="">
         </div>
-        <br>
-        <button type="button" onclick="document.getElementById('11').style.display='none'">Mutass kevesebbet</button>
-        <button type="button" onclick="document.getElementById('11').style.display='block'">Mutass többet</button>
     </li>
 </ul>
 <ul>
@@ -364,47 +346,37 @@
         <ul>
             <li>
                 <h2>Autószimulátorok</h2>
+                <button type="button" onclick="showmore('12', this)">Mutass többet
+                </button>
                 <div class="mufaj-kep" id="12">
                     <img class="mufaj-kep2" src="images/autovezetoszim.jpg" alt="">
                 </div>
                 <br>
-                <button type="button" onclick="document.getElementById('12').style.display='none'">Mutass kevesebbet
-                </button>
-                <button type="button" onclick="document.getElementById('12').style.display='block'">Mutass többet
-                </button>
             </li>
             <li>
                 <h2>Vasútszimulátorok</h2>
+                <button type="button" onclick="showmore('13', this)">Mutass többet
+                </button>
                 <div class="mufaj-kep" id="13">
                     <img class="mufaj-kep2" src="images/vasutszim.jpg" alt="">
                 </div>
-                <br>
-                <button type="button" onclick="document.getElementById('13').style.display='none'">Mutass kevesebbet
-                </button>
-                <button type="button" onclick="document.getElementById('13').style.display='block'">Mutass többet
-                </button>
             </li>
             <li>
                 <h2>Repülőgép-szimulátorok</h2>
+                <button type="button" onclick="showmore('14', this)">Mutass többet
+                </button>
                 <div class="mufaj-kep" id="14">
                     <img class="mufaj-kep2" src="images/repuloszim.jpg" alt="">
                 </div>
-                <br>
-                <button type="button" onclick="document.getElementById('14').style.display='none'">Mutass kevesebbet
-                </button>
-                <button type="button" onclick="document.getElementById('14').style.display='block'">Mutass többet
-                </button>
+
             </li>
             <li>
                 <h2>Tengeralattjáró-szimulátorok</h2>
+                <button type="button" onclick="showmore('15', this)">Mutass többet
+                </button>
                 <div class="mufaj-kep" id="15">
                     <img class="mufaj-kep2" src="images/tengeralattjarao.jpg" alt="">
                 </div>
-                <br>
-                <button type="button" onclick="document.getElementById('15').style.display='none'">Mutass kevesebbet
-                </button>
-                <button type="button" onclick="document.getElementById('15').style.display='block'">Mutass többet
-                </button>
             </li>
         </ul>
     </li>
@@ -413,40 +385,33 @@
 <ul>
     <li>
         <h2>Sport</h2>
+        <button type="button" onclick="showmore('16', this)">Mutass többet</button>
         <div class="mufaj-kep" id="16">
             <img class="mufaj-kep2" src="images/sportjatek.jpg" alt="">
         </div>
-        <br>
-        <button type="button" onclick="document.getElementById('16').style.display='none'">Mutass kevesebbet</button>
-        <button type="button" onclick="document.getElementById('16').style.display='block'">Mutass többet</button>
     </li>
     <li>
         <h2>Lexikális tudás alapú</h2>
+        <button type="button" onclick="showmore('17', this)">Mutass többet</button>
         <div class="mufaj-kep" id="17">
             <img class="mufaj-kep2" src="images/honfoglalo.jpg" alt="">
         </div>
-        <br>
-        <button type="button" onclick="document.getElementById('17').style.display='none'">Mutass kevesebbet</button>
-        <button type="button" onclick="document.getElementById('17').style.display='block'">Mutass többet</button>
     </li>
     <li>
         <h2>Szerencsejáték</h2>
+        <button type="button" onclick="showmore('18', this)">Mutass többet</button>
         <div class="mufaj-kep" id="18">
             <img class="mufaj-kep2" src="images/szerencsejatek.jpg" alt="">
         </div>
-        <br>
-        <button type="button" onclick="document.getElementById('18').style.display='none'">Mutass kevesebbet</button>
-        <button type="button" onclick="document.getElementById('18').style.display='block'">Mutass többet</button>
     </li>
     <li>
         <h2> Brawl </h2>
         (verekedős játékok pl.: Mortal Kombat)
+        <br>
+        <button type="button" onclick="showmore('19', this)">Mutass többet</button>
         <div class="mufaj-kep" id="19">
             <img class="mufaj-kep2" src="images/mortalkombat.jpg" alt="">
         </div>
-        <br>
-        <button type="button" onclick="document.getElementById('19').style.display='none'">Mutass kevesebbet</button>
-        <button type="button" onclick="document.getElementById('19').style.display='block'">Mutass többet</button>
     </li>
     <li>
         <h2>Táblajátékok:</h2>
@@ -455,12 +420,10 @@
             Lehetnek
             közelvalóságszerűek, vagy speciális effektekkel attól elrugaszkodottak (pl. animált, szétmálló bábuk).
         </p>
+        <button type="button" onclick="showmore('20', this)">Mutass többet</button>
         <div class="mufaj-kep" id="20">
             <img class="mufaj-kep2" src="images/pummel.jpg" alt="">
         </div>
-        <br>
-        <button type="button" onclick="document.getElementById('20').style.display='none'">Mutass kevesebbet</button>
-        <button type="button" onclick="document.getElementById('20').style.display='block'">Mutass többet</button>
     </li>
 </ul>
 <div class="vege-div"></div>
