videojatekok.html elkezdve, css, alsószegélyek

--- a/index.html
+++ b/index.html
@@ -26,12 +26,14 @@
         <hr>
         <img class="felsoszegely" src="images/layere.png" alt="">
     </div>
+    <h2 class="h2fooldal">Az oldalról </h2>
     <div id="azoldalrolfooldal" >
-        <h2 class="h2fooldal">Az oldalról </h2>
         <p class="azoldalrolfooldal">Az oldal a játékokról, mint egy nagy terjedelmű alaptéma, <br> magába
             foglalja főként a videójátékokat, és az olvasókat <br> megismerteti annak mindenféle ágaival. </p>
     </div>
 
-
+<footer>
+    <img src="images/layere2.png" alt="alsoszegely" class="alsoszegely">
+</footer>
 </body>
 </html>
