--- a/videojatekok.html
+++ b/videojatekok.html
@@ -9,15 +9,22 @@
     <link rel="icon" href="images/favicon.ico.ico">
 </head>
 <body>
-    <div id="topnav">
-        <a href="index.html">Kezdőlap</a>
-        <a href="mufajok.html">Műfajok</a>
-        <a href="onlinejatekok.html">Online játékok</a>
-        <a href="sikeres.html">Sikeres játékok</a>
-        <a href="speedrunok.html">Speedrunok</a>
-        <a href="jatek_tortenet.html">Történet</a>
+    <header>
+    <div id="header">
+        <img class="hatterkep1" src="images/hatterkep1.png" alt="">
+        <h1 class="focim"><a href="index.html"><span>J</span></a>átékok</h1>
+        <div id="topnav">
+            <a href="index.html">Kezdőlap</a>
+            <a href="mufajok.html">Műfajok</a>
+            <a href="onlinejatekok.html">Online játékok</a>
+            <a href="sikeres.html">Sikeres játékok</a>
+            <a href="speedrunok.html">Speedrunok</a>
+            <a href="jatek_tortenet.html">Történet</a>
+        </div>
+        </header>
+        <hr>
+        <img class="felsoszegely" src="images/layere.png" alt="">
     </div>
-<hr>
 </body>
 
 </html>
