javítások szétszórva és "srh1" beírása

--- a/speedrunok.html
+++ b/speedrunok.html
@@ -19,8 +19,7 @@
         <a href="videojatekok.html">Videójátékok</a>
     </div>
     <hr>
-    <img class="felsoszegely" src="images/layere.png" alt="">
-    <h1 class="srh1">Speedrunok</h1>
+    <h1 class="srh1">A Speedrunolás mestersége</h1>
     <p>A speedrunolás teknikája már az első híresebb videójátékok megjelenése óta jelen van,célja hogy a játékos különféle exploitok és taktikák,illetve glitchek segítségével gyorsabban kijátssza az adott játékot vagy játékszakaszt. Ez időre megy, és gyakran versenyeket is rendeznek belőle.</p>
 <div>
     <iframe class="sriframe1" style="float:right" src="https://www.youtube.com/embed/Gum4GI2Jr0s?controls=0&autoplay=1&mute=1" frameborder="0"  height="360px" width="640px"></iframe>
@@ -36,10 +35,10 @@
     </div>
 </ul>
 <h2 class="srh2">Versenyek</h2>
-<p>Ebből a stílusból szinte már egy játékkultúra alakult ,ki,sokan komolyan is veszik,hiszen erről egy oldal is létezik <a href="https://www.speedrun.com">speedrun.com</a>néven ahol megtekinthető szinte minden játék leggyorsabb kijátszási ideje, illetve az adott játékos userneve is.</p>
+<p>Ebből a stílusból szinte már egy játékkultúra alakult, ki,sokan komolyan is veszik, hiszen erről egy oldal is létezik <a href="https://www.speedrun.com">speedrun.com</a>néven ahol megtekinthető szinte minden játék leggyorsabb kijátszási ideje, illetve az adott játékos userneve is.</p>
 <table class="srtablazat">
     <tr>
-        <td>User neve</td>
+        <td>Felhasználónév</td>
         <td>Játék</td>
     </tr>
     <tr>
