főoldali változtatások + videójátékok

--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 </head>
 <body>
     <header>
-        <img class="hatterkep1" src="images/hatterkep1.png" alt="">
+
         <div id="header">
-            <h1 class="focim"><a href="index.html"><span>J</span></a>átékok</h1>
+            <p class="focim"><a href="index.html"><span>J</span></a>átékok</p>
             <div id="topnav">
                 <a href="jatek_tortenet.html">Történet</a>
                 <a href="mufajok.html">Műfajok</a>
@@ -26,7 +26,7 @@
         <hr>
         <img class="felsoszegely" src="images/layere.png" alt="">
     </div>
-    <h2 class="h2fooldal">Az oldalról </h2>
+    <h2 class="h2fooldal">Miről szól az oldal? </h2>
     <div id="azoldalrolfooldal" >
         <p class="azoldalrolfooldal">Az oldal a játékokról, mint egy nagy terjedelmű alaptéma, <br> magába
             foglalja főként a videójátékokat, és az olvasókat <br> megismerteti annak mindenféle ágaival. </p>
