képek + online, offline játékok

--- a/onlinejatekok.html
+++ b/onlinejatekok.html
@@ -15,8 +15,59 @@
         <a href="jatek_tortenet.html">Játék történet</a>
         <a href="sikeres.html">Sikeres játékok</a>
         <a href="speedrunok.html">Speedrunok</a>
-        <a href="videojatekok.html">Videójátékok</a>
+        <a href="videojatekok.html">Offline játékok</a>
     </div>
     <hr>
+    <h1 class="sjh1 ">Pár online játszható játék</h1>
+    <div class="legsikeresebbkep">
+        <div class="sikerescontainer">
+        <img src="images/sso.webp" alt="Star Stable Online" title="Star Stable Online">
+    </div>
+  </div>
+    <div class="legsikeresebbkep">
+        <div class="sikerescontainer">
+        <img src="images/gta5.jpg" alt="Grand Theft Auto" title="Grand Theft Auto">
+    </div>
+ </div>
+    <div class="legsikeresebbkep">
+        <div class="sikerescontainer">
+        <img src="images/genshinimpact.jpg" alt="Genshin Impact" title="Genshin Impact">
+    </div>
+</div>
+     <div class="legsikeresebbkep">
+        <div class="sikerescontainer">
+        <img src="images/fortnite.jfif" alt="Fortnite" title="Fortnite">
+    </div>
+</div>
+     <div class="legsikeresebbkep">
+        <div class="sikerescontainer">
+        <img src="images/pubg1.jpg" alt="PlayerUnknown’s Battlegrounds" title="PlayerUnknown’s Battlegrounds">
+    </div> 
+</div>
+    <div class="legsikeresebbkep">
+        <div class="sikerescontainer">
+        <img src="images/clashroyale.jpg" alt="Clash Royale" title="Clash Royale">
+    </div>
+</div>
+     <div class="legsikeresebbkep">
+        <div class="sikerescontainer">
+        <img src="images/unturned.png" alt="Unturned" title="Unturned">
+    </div>
+</div>
+    <div class="legsikeresebbkep">
+        <div class="sikerescontainer">
+        <img src="images/amongus.png" alt="Among us" title="Amogussy">
+    </div>
+</div>
+    <div class="legsikeresebbkep">
+        <div class="sikerescontainer">
+        <img src="images/roblox.jpg" alt="Roblox" title="Roblox">
+    </div>
+</div>
+    <div class="legsikeresebbkep">
+        <div class="sikerescontainer">
+        <img src="images/aliciaonline.jpg" alt="Alicia Online" title="Alicia Online">
+    </div>
+</div>
 </body>
 </html>
