--- a/sikeres.html
+++ b/sikeres.html
@@ -15,7 +15,7 @@
         <a href="onlinejatekok.html">Online játékok</a>
         <a href="jatek_tortenet.html">Játék történet</a>
         <a href="speedrunok.html">Speedrunok</a>
-        <a href="videojatekok.html">Videójátékok</a>
+        <a href="videojatekok.html">Offline játékok</a>
     </div>
     <hr>
     <h1 class="sjh1 ">Mindenidők legsikeresebb játékai</h1>
