--- a/videojatekok.html
+++ b/videojatekok.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Videójátékok</title>
+    <title>Offline játékok</title>
     <link rel="stylesheet" href="index.css">
     <link rel="icon" href="images/favicon.ico.ico">
 </head>
@@ -22,7 +22,57 @@
         </div>
         </header>
         <hr>
-        <img class="felsoszegely" src="images/layere.png" alt="">
+    </div>
+    <h1 class="sjh1 ">Pár offline játszható játék</h1>
+        <div class="legsikeresebbkep">
+            <div class="sikerescontainer">
+            <img src="images/fancade.webp" alt="Fancade" title="Fancade">
+        </div>
+      </div>
+        <div class="legsikeresebbkep">
+            <div class="sikerescontainer">
+            <img src="images/rider.jpg" alt="Rider" title="Rider">
+        </div>
+     </div>
+        <div class="legsikeresebbkep">
+            <div class="sikerescontainer">
+            <img src="images/house paint.png" alt="House paint" title="House paint">
+        </div>
+    </div>
+         <div class="legsikeresebbkep">
+            <div class="sikerescontainer">
+            <img src="images/thewalkingzombie2.webp" alt="The Walking Zombie 2" title="The Walking Zombie 2">
+        </div>
+    </div>
+         <div class="legsikeresebbkep">
+            <div class="sikerescontainer">
+            <img src="images/earntodie.webp" alt="Earn to die" title="Earn to die">
+        </div> 
+    </div>
+        <div class="legsikeresebbkep">
+            <div class="sikerescontainer">
+            <img src="images/stardewvalley.jpg" alt="Stardew Valley" title="Stardew Valley">
+        </div>
+    </div>
+         <div class="legsikeresebbkep">
+            <div class="sikerescontainer">
+            <img src="images/pou.jpg" alt="Pou" title="Pou">
+        </div>
+    </div>
+        <div class="legsikeresebbkep">
+            <div class="sikerescontainer">
+            <img src="images/angrybirds.webp" alt="Angry birds" title="Angry birds">
+        </div>
+    </div>
+        <div class="legsikeresebbkep">
+            <div class="sikerescontainer">
+            <img src="images/plagueinc.webp" alt="PLague Inc." title="PLague Inc.">
+        </div>
+    </div>
+        <div class="legsikeresebbkep">
+            <div class="sikerescontainer">
+            <img src="images/subwaysurfers.jfif" alt="Subway Surfers" title="Subway Surfers">
+        </div>
     </div>
 </body>
 
