--- a/speedrunok.html
+++ b/speedrunok.html
@@ -16,7 +16,7 @@
         <a href="onlinejatekok.html">Online játékok</a>
         <a href="sikeres.html">Sikeres játékok</a>
         <a href="jatek_tortenet.html">Történet</a>
-        <a href="videojatekok.html">Videójátékok</a>
+        <a href="videojatekok.html">Offline játékok</a>
     </div>
     <hr>
     <h1 class="srh1">A Speedrunolás mestersége</h1>
